--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,13 +1,45 @@
 ---
-rails.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
-rails/index.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
-application.js: application-4e2d2250819327f2531f25a325fe9099.js
-application/index.js: application-4e2d2250819327f2531f25a325fe9099.js
-application.css: application-84317d347d78b58c7fed5b7fa5b881e0.css
-application/index.css: application-84317d347d78b58c7fed5b7fa5b881e0.css
+black_cart.png: black_cart-abf6570d27f4fa99a8e997cc4faf4df5.png
+black_cart/index.png: black_cart-abf6570d27f4fa99a8e997cc4faf4df5.png
 glyphicons-halflings-white.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
 glyphicons-halflings-white/index.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
 glyphicons-halflings.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
 glyphicons-halflings/index.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
+product1.jpg: product1-8691fc739e10960f5d38e5c55fb3b041.jpg
+product1/index.jpg: product1-8691fc739e10960f5d38e5c55fb3b041.jpg
+product11.jpg: product11-e597194c43cce226791450168dfa55d8.jpg
+product11/index.jpg: product11-e597194c43cce226791450168dfa55d8.jpg
+product12.jpg: product12-e0435ffa74e3a454f467ef9d0d3f288c.jpg
+product12/index.jpg: product12-e0435ffa74e3a454f467ef9d0d3f288c.jpg
+product14.png: product14-35bbf7a130c7ef238163c3e2caf9ef62.png
+product14/index.png: product14-35bbf7a130c7ef238163c3e2caf9ef62.png
+product15.png: product15-c5e1b3597b941afa9a1289a80ef8c766.png
+product15/index.png: product15-c5e1b3597b941afa9a1289a80ef8c766.png
+product2.jpg: product2-c5df378291ae389af0871505f528d577.jpg
+product2/index.jpg: product2-c5df378291ae389af0871505f528d577.jpg
+product3.jpg: product3-7d27ce737238ff215067e915c5c007b6.jpg
+product3/index.jpg: product3-7d27ce737238ff215067e915c5c007b6.jpg
+product4.jpg: product4-f4f78601918bf246cac755fbf9997183.jpg
+product4/index.jpg: product4-f4f78601918bf246cac755fbf9997183.jpg
+rails.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
+rails/index.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
+slider1.png: slider1-d48e07fe4ee5fd04a20bd221487994ad.png
+slider1/index.png: slider1-d48e07fe4ee5fd04a20bd221487994ad.png
+slider2.png: slider2-4d93e24ff4247e82222020c53a39eff5.png
+slider2/index.png: slider2-4d93e24ff4247e82222020c53a39eff5.png
+slider3.png: slider3-b8012808ac8065f772e8764cbf16ba4e.png
+slider3/index.png: slider3-b8012808ac8065f772e8764cbf16ba4e.png
+application.js: application-60a2b7c1fc5d16390ff9259a44c1aff7.js
+application/index.js: application-60a2b7c1fc5d16390ff9259a44c1aff7.js
+application.css: application-221e24949bf9f56db34e2ee470a5cb78.css
+application/index.css: application-221e24949bf9f56db34e2ee470a5cb78.css
+FontAwesome.otf: FontAwesome-468f83b63df32064983141584a19ff17.otf
+FontAwesome/index.otf: FontAwesome-468f83b63df32064983141584a19ff17.otf
+fontawesome-webfont.eot: fontawesome-webfont-635909f146e208b3509acdf3b154bf0d.eot
+fontawesome-webfont/index.eot: fontawesome-webfont-635909f146e208b3509acdf3b154bf0d.eot
+fontawesome-webfont.ttf: fontawesome-webfont-6a4e273908b7e43d9e479d38b8ae5957.ttf
+fontawesome-webfont/index.ttf: fontawesome-webfont-6a4e273908b7e43d9e479d38b8ae5957.ttf
+fontawesome-webfont.woff: fontawesome-webfont-a0fbd98b232e7e1ef9cdaad813b26eb3.woff
+fontawesome-webfont/index.woff: fontawesome-webfont-a0fbd98b232e7e1ef9cdaad813b26eb3.woff
 jquery.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
 jquery/index.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
