--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,4 +1,6 @@
 ---
+291602.jpg: 291602-488be92c98ad375fa825f89d8757367c.jpg
+291602/index.jpg: 291602-488be92c98ad375fa825f89d8757367c.jpg
 black_cart.png: black_cart-abf6570d27f4fa99a8e997cc4faf4df5.png
 black_cart/index.png: black_cart-abf6570d27f4fa99a8e997cc4faf4df5.png
 glyphicons-halflings-white.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
@@ -29,10 +31,10 @@ slider2.png: slider2-4d93e24ff4247e82222020c53a39eff5.png
 slider2/index.png: slider2-4d93e24ff4247e82222020c53a39eff5.png
 slider3.png: slider3-b8012808ac8065f772e8764cbf16ba4e.png
 slider3/index.png: slider3-b8012808ac8065f772e8764cbf16ba4e.png
-application.js: application-cae7bdfa8218feef4c4e58695f57f00e.js
-application/index.js: application-cae7bdfa8218feef4c4e58695f57f00e.js
-application.css: application-f15467c11e37f2212ad2634e284a94d8.css
-application/index.css: application-f15467c11e37f2212ad2634e284a94d8.css
+application.js: application-42164fec89602596357c64a04a847941.js
+application/index.js: application-42164fec89602596357c64a04a847941.js
+application.css: application-fed3a6a62d54b4335933fcea18d0b077.css
+application/index.css: application-fed3a6a62d54b4335933fcea18d0b077.css
 FontAwesome.otf: FontAwesome-468f83b63df32064983141584a19ff17.otf
 FontAwesome/index.otf: FontAwesome-468f83b63df32064983141584a19ff17.otf
 fontawesome-webfont.eot: fontawesome-webfont-635909f146e208b3509acdf3b154bf0d.eot
